Add course modules

--- a/clean-code/Módulo 3. Diseño y Arquitectura de Software Limpio/4. Separación de Responsabilidades.md
+++ b/clean-code/Módulo 3. Diseño y Arquitectura de Software Limpio/4. Separación de Responsabilidades.md
@@ -1,3 +1,76 @@
 # Desacoplamiento, cohesión, y la regla de "una sola cosa"
 
+Dentro del camino hacia un código limpio y de alta calidad, un principio fundamental es la *separación de responsabilidades*. Este módulo explora cómo lograr que las diferentes partes de nuestro código (módulos, clases, funciones) tengan una única razón para existir y cambiar, y cómo esto se relaciona con conceptos clave como el desacoplamiento y la cohesión.
+
+**Desacoplamiento: Reduciendo las Interdependencias**
+
+El *acoplamiento* (coupling) se refiere al grado en que distintas partes de un sistema de software dependen unas de otras. Un alto acoplamiento significa que un cambio en un módulo probablemente requerirá cambios en otros módulos. Esto crea un efecto dominó que dificulta:
+
+*   **La comprensión:** Si para entender un módulo A, necesitas entender B, C y D, tu carga cognitiva aumenta.
+*   **La modificación:** Cambiar A implica el riesgo de "romper" B, C y D.
+*   **La reutilización:** Es difícil tomar A y usarlo en otro contexto si está fuertemente ligado a otros módulos.
+
+El desacoplamiento, por lo tanto, busca minimizar estas dependencias. Un módulo bien desacoplado es como una pieza de un rompecabezas que encaja limpiamente con sus vecinas, sin forzar conexiones antinaturales.
+
+**Cohesión: La Unidad Interna**
+
+Mientras que el acoplamiento se refiere a las relaciones *entre* módulos, la *cohesión* se refiere a la relación *interna* de los elementos dentro de un módulo. Una alta cohesión significa que todos los elementos dentro de un módulo (por ejemplo, las funciones y variables dentro de una clase) están fuertemente relacionados y trabajan juntos para un propósito común.
+
+Piensa en una caja de herramientas. Una alta cohesión sería tener herramientas para carpintería todas juntas (martillo, clavos, serrucho). Una baja cohesión sería tener mezclados utensilios de cocina, herramientas de jardinería y productos de limpieza.
+
+**La Regla de "Una Sola Cosa"**
+
+Una forma práctica de lograr alta cohesión y bajo acoplamiento es adherirse al principio de "una sola cosa":
+
+*   **Funciones:** Cada función debe tener una tarea única y bien definida. Si puedes describir la función en una frase corta y clara, sin usar "y" o "o", es una buena señal. Si necesitas varias oraciones, o la descripción se vuelve difusa, probablemente la función está haciendo demasiado.
+*   **Clases:** Una clase debe tener una única responsabilidad, una única razón para cambiar. Si puedes resumir el propósito de la clase en una frase concisa, sin conjunciones, es una buena señal.
+
+La regla "Una sola cosa" es una forma de expresar la idea de una función o un objeto que solo se ocupa de una tarea, y esa tarea debe ser simple.
+En un mundo ideal, en el contexto de una función, por ejemplo, esta solo tiene una tarea si no es posible extraer ninguna otra función de ella.
+
+**Beneficios de la Separación de Responsabilidades**
+
+Cuando logramos separar las responsabilidades en nuestro código, obtenemos múltiples beneficios:
+
+*   **Mayor legibilidad:** El código se vuelve más fácil de entender porque cada pieza tiene un propósito claro y limitado.
+*   **Mayor facilidad de mantenimiento:** Los cambios se localizan en módulos específicos, reduciendo el riesgo de efectos secundarios no deseados.
+*   **Mayor reusabilidad:** Los módulos con alta cohesión y bajo acoplamiento son más fáciles de reutilizar en otros contextos o proyectos.
+*   **Mayor facilidad de prueba:** Es más sencillo probar unidades de código que tienen una sola responsabilidad.
+*   **Mayor flexibilidad y adaptabilidad:** Un sistema bien desacoplado es más resistente al cambio, ya que las modificaciones tienden a estar contenidas.
+
+La separación de responsabilidades no es un concepto abstracto, sino una guía práctica para construir software más robusto, mantenible y evolutivo. Al aplicar estos principios, hacemos que nuestro código sea más fácil de entender, modificar y reutilizar, lo que a su vez nos permite ser programadores más eficientes y productivos.
+
 #  Separación de niveles de abstracción 
+
+Dentro del ámbito del diseño de software y la escritura de código limpio, uno de los principios fundamentales es la *separación de responsabilidades*. Este concepto, en su esencia, implica que las diferentes partes de un sistema (ya sean módulos, clases, funciones, etc.) deben tener áreas de preocupación bien definidas y, lo que es más importante, *limitadas*. Es decir, cada parte debe encargarse de una tarea o conjunto de tareas relacionadas, y *no* inmiscuirse en las responsabilidades de otras partes.
+
+**Separación de Niveles de Abstracción: Un Pilar Clave**
+
+Un aspecto crucial de la separación de responsabilidades es la *separación de niveles de abstracción*. ¿Qué significa esto? Significa que, al diseñar un sistema, debemos organizar el código de tal manera que los conceptos de "alto nivel" (la lógica general, las reglas del negocio) estén aislados y sean independientes de los conceptos de "bajo nivel" (los detalles de implementación, la interacción con bases de datos, interfaces de usuario, etc.).
+
+**¿Por qué es importante separar los niveles de abstracción?**
+
+*   **Mantenibilidad y Facilidad de Cambio:** Cuando los niveles de abstracción están bien separados, los cambios en una parte del sistema (por ejemplo, cambiar la base de datos) no deberían obligarnos a modificar otras partes que no están directamente relacionadas. Si la lógica de negocio de alto nivel no está mezclada con los detalles de cómo se accede a una base de datos, entonces podemos cambiar la base de datos sin tocar la lógica de negocio.
+
+*   **Comprensión del Código:** Un código con una buena separación de niveles de abstracción es más fácil de entender. Cada parte se ocupa de un conjunto limitado de conceptos, lo que reduce la carga cognitiva del programador que intenta entender, depurar o modificar el código.
+
+*   **Reusabilidad:** Si una pieza de código se centra en una tarea específica y no está enredada con detalles de otras partes del sistema, es más probable que pueda ser reutilizada en otros contextos.
+
+**Ejemplos y Analogías**
+
+* **Alto Nivel vs. Bajo Nivel:** El libro *The Clean Coder* lo expresa de manera muy clara. Se busca que los conceptos de alto nivel no estén mezclados con los detalles de bajo nivel. Un alto nivel se refiere a la logica general, mientras que un bajo nivel, se refiere, por ejemplo, a la interacción con bases de datos o interfaces de usuario.
+
+*   **"Dile, no preguntes" (Tell, Don't Ask):** Este principio, mencionado en *Clean Code*, encaja muy bien con la separación de niveles de abstracción. En lugar de que un objeto extraiga información de otro para luego tomar decisiones basadas en esa información (mezclando niveles), el objeto debería simplemente *decirle* al otro objeto qué hacer. Esto mantiene las responsabilidades claras y evita que los objetos se entrometan en los asuntos internos de otros.
+
+**Cómo lograr la Separación de Niveles de Abstracción**
+
+*   **Funciones pequeñas y enfocadas:** Una función debe "hacer una sola cosa". Esto significa que una función no debe combinar lógica de alto nivel (por ejemplo, "procesar una orden de compra") con detalles de bajo nivel (por ejemplo, "conectarse a la base de datos").
+
+*   **Regla del Paso Descendente ("Stepdown Rule"):** El libro *Clean Code* introduce este concepto. La idea es que el código dentro de una función debe estar en un nivel de abstracción *inmediatamente inferior* al de la función misma. Cada función "prepara el escenario" para las funciones que le siguen.
+
+*   **Patrones como el Decorator:** Para lograr la separación de niveles de abstracción y la modularidad, se puede implementar el patrón de diseño "Decorator".
+
+**En Resumen**
+
+La separación de niveles de abstracción es una pieza clave para lograr un código limpio, mantenible, y fácil de entender. Al separar las "grandes ideas" de los "detalles de implementación", hacemos que nuestro software sea más resistente al cambio, más fácil de reutilizar, y menos propenso a errores sutiles.
+
